# team-29-app

./: README.md
kaiho_zukan/: .gitignore  README.md  post_problem_form.patch
kaiho_zukan/backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
kaiho_zukan/backend/app/: auth.py  main.py  models.py  schemas.py
kaiho_zukan/backend/app/api/: auth.py  categories.py  deps.py  explanations.py  leaderboard.py  me.py  notifications.py  ocr.py  problems.py  profile.py  review.py  router.py  user.py
kaiho_zukan/backend/app/api/problems/: __init__.py  answers.py  explanations.py  interactions.py  manage.py  model_answers.py  retrieval.py
kaiho_zukan/backend/app/core/: config.py  db.py
kaiho_zukan/backend/app/models/: __init__.py  ai.py  answer.py  assets.py  category.py  explanation.py  like.py  notification.py  option.py  problem.py  user.py  user_category.py
kaiho_zukan/backend/app/schemas/: ai.py  answer.py  auth.py
kaiho_zukan/backend/app/security/: auth.py
kaiho_zukan/backend/app/services/: ai_explain.py  ai_judge.py  util.py
kaiho_zukan/backend/initdb/: 01_categories.sql  02_badges.sql
kaiho_zukan/frontend/: .env.production  README.md  pubspec.yaml
kaiho_zukan/frontend/android/app/: build.gradle.kts
kaiho_zukan/frontend/ios/Runner.xcodeproj/: project.pbxproj
kaiho_zukan/frontend/lib/: main.dart
kaiho_zukan/frontend/linux/: CMakeLists.txt
kaiho_zukan/frontend/test/: widget_test.dart
kaiho_zukan/frontend/web/: index.html  manifest.json
kaiho_zukan/frontend/windows/: CMakeLists.txt
(+60 files in other folders)
