[project]
name = "learn-backend-mod"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "pymysql>=1.1",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7",
  "python-jose>=3.3",
  "pydantic>=2.6",
  "openai>=1.40",
]
